# spaceshooter

./: .clangd  .gitignore  meson.build
include/: app.hh  logger.hh
include/game/: entity.hh  player.hh
include/gfx/: vertex.hh
include/sdl/: exception.hh  resource.hh  types.hh
include/sdl/gpu/: buffer.hh  command_buffer.hh  device.hh  pass.hh  pipeline.hh  shader.hh  texture.hh  types.hh
shaders/: fragment.frag  fragment.spv  meson.build  shaders.c  shaders.h  vertex.spv  vertex.vert
src/: app.cc  main.cc  meson.build
src/game/: meson.build  player.cc
src/sdl/: meson.build
src/sdl/gpu/: buffer.cc  command_buffer.cc  meson.build  pass.cc  pipeline.cc  shader.cc  texture.cc
subprojects/: .gitignore
